# omniTAK-mobile

./: .bazelrc  .bazelrc.ios  .gitignore  ANDROID_BUILD_SETUP.md  BUILD_ANDROID.md  CONTRIBUTING.md  Dockerfile.android  GITLAB_CI_SETUP.md  README.md  build-android-docker.sh  build_android_libs.sh  docker-compose.yml
apps/omnitak/: DEPLOYMENT.md  EASY_TAK_CONNECTION_UX.md  README.md  fix_duplicates.py  update_build.sh  update_version.sh  update_xcode_refs.rb
apps/omnitak/OmniTAKMobile/: ATAKLoadingScreen.swift  BNGConverter.swift  CoordinateDisplayView.swift  FILTER_INTEGRATION_GUIDE.md  MapViewController.swift  RESTRUCTURING_GUIDE.md  SettingsView.swift
apps/omnitak/OmniTAKMobile.xcodeproj/: project.pbxproj  project.pbxproj.backup  project.pbxproj.bak
apps/omnitak/OmniTAKMobile.xcodeproj.backup/: project.pbxproj  project.pbxproj.backup2
apps/omnitak/OmniTAKMobile/CoT/: CoTEventHandler.swift  CoTFilterCriteria.swift  CoTMessageParser.swift
apps/omnitak/OmniTAKMobile/Core/: ContentView.swift  OmniTAKMobileApp.swift
apps/omnitak/OmniTAKMobile/Managers/: CertificateManager.swift  ChatManager.swift  CoTFilterManager.swift  DataPackageManager.swift  DrawingToolsManager.swift  GeofenceManager.swift  MeasurementManager.swift  MeshtasticManager.swift  OfflineMapManager.swift  ServerManager.swift  WaypointManager.swift
apps/omnitak/OmniTAKMobile/Models/: ArcGISModels.swift  CASRequestModels.swift  ChatModels.swift  CoTFilterModel.swift  DataPackageModels.swift  DrawingModels.swift  EchelonModels.swift  ElevationProfileModels.swift  GeofenceModels.swift  LineOfSightModels.swift  MEDEVACModels.swift  MeasurementModels.swift  MeshtasticModels.swift  MissionPackageModels.swift  OfflineMapModels.swift  PointMarkerModels.swift  RadialMenuModels.swift  RouteModels.swift  SPOTREPModels.swift  TeamModels.swift  TrackModels.swift  VideoStreamModels.swift  WaypointModels.swift
apps/omnitak/OmniTAKMobile/Resources/: Info.plist  omnitak-mobile.p12
apps/omnitak/OmniTAKMobile/Services/: ArcGISFeatureService.swift  ArcGISPortalService.swift  BloodhoundService.swift  BreadcrumbTrailService.swift  CertificateEnrollmentService.swift  ChatService.swift  DigitalPointerService.swift  EchelonService.swift  ElevationProfileService.swift  EmergencyBeaconService.swift  GeofenceService.swift  LineOfSightService.swift  MeasurementService.swift  MissionPackageSyncService.swift  NavigationService.swift  PhotoAttachmentService.swift  PointDropperService.swift  PositionBroadcastService.swift  RangeBearingService.swift  RoutePlanningService.swift  TAKService.swift  TeamService.swift  TerrainVisualizationService.swift  TrackRecordingService.swift  TurnByTurnNavigationService.swift  VideoStreamService.swift
apps/omnitak/OmniTAKMobile/Storage/: ChatPersistence.swift  ChatStorageManager.swift  DrawingPersistence.swift  RouteStorageManager.swift  TeamStorageManager.swift
apps/omnitak/OmniTAKMobile/Views/: ATAKLoadingScreen.swift  ATAKToolsView.swift  AboutView.swift  ArcGISPortalView.swift  BloodhoundView.swift  CASRequestView.swift  CertificateEnrollmentView.swift  CertificateManagementView.swift  CertificateSelectionView.swift  ChatView.swift  CoTFilterPanel.swift  CoTUnitListView.swift  CompassOverlayView.swift  ContactDetailView.swift  ContactListView.swift  ConversationView.swift  DataPackageView.swift  DigitalPointerView.swift  DrawingPropertiesView.swift  DrawingToolsPanel.swift  EchelonHierarchyView.swift  ElevationProfileView.swift  EmergencyBeaconView.swift  FirstTimeOnboarding.swift  GeofenceManagementView.swift  (+35 more)
apps/omnitak/screenshots/: .gitkeep  README.md
apps/omnitak_android/: BUILD.bazel  ICON_ASSETS_README.md  README.md  verify_build.sh
apps/omnitak_android/app_assets/android/drawable-nodpi/: splash.xml
apps/omnitak_android/app_assets/android/values/: colors.xml  strings.xml  themes.xml
apps/omnitak_android/src/valdi/omnitak_app/: BUILD.bazel
apps/omnitak_android/src/valdi/omnitak_app/src/: App.tsx  index.ts
apps/omnitak_ios_test/: ENHANCEMENTS_SUMMARY.md
apps/omnitak_ios_test/OmniTAKMobile/: ATAKLoadingScreen.swift  MapViewController.swift  NavigationDrawer.swift
apps/omnitak_ios_test/OmniTAKTest/: EnhancedCoTMarker.swift  EnhancedMapViewRepresentable.swift  Info.plist  MapViewController.swift  MapViewController_Enhanced.swift  NavigationDrawer.swift  OmniTAKTestApp.swift  ServerManager.swift
apps/omnitak_ios_test/OmniTAKTest.xcodeproj/: project.pbxproj
apps/omnitak_mobile_ios/: README.md
bzl/: dependencies.bzl  workspace_init.bzl
compiler/companion/remotedebug-ios-webkit-adapter/: README.md
crates/.cargo/: config.toml
docs/: PLUGIN_ARCHITECTURE.md  PLUGIN_CI_CD_SETUP.md  PLUGIN_DEVELOPMENT_GUIDE.md
modules/omnitak_mobile/: ATAK_MENU_IMPLEMENTATION.md  BUILD.bazel  BUILD_CONFIGURATION.md  BUILD_GUIDE.md  INTEGRATION.md  README.md  TROUBLESHOOTING.md  build_android.sh
modules/omnitak_mobile/ios/native/: BUILD.bazel  CertificateKeychainManager.swift  OmniTAKNativeBridge.swift
modules/omnitak_mobile/src/valdi/omnitak/: AppController.tsx
modules/omnitak_mobile/src/valdi/omnitak/components/: AddServerDialog.tsx  CertificateEnrollmentDialog.tsx  CertificateImportDialog.tsx  NavigationDrawer.tsx
modules/omnitak_mobile/src/valdi/omnitak/models/: MarkerModel.ts
modules/omnitak_mobile/src/valdi/omnitak/screens/: CertificateManagementScreen.tsx  EnhancedMapScreen.tsx  FederatedServerScreen.tsx  MapScreen.tsx  MapScreenWithMapLibre.tsx  PluginManagementScreen.tsx  ServerManagementScreen.tsx  SettingsScreen.tsx
modules/omnitak_mobile/src/valdi/omnitak/services/: CotParser.ts  MarkerManager.ts  MultiServerFederation.ts  TakService.ts
modules/omnitak_plugin_system/ios/: BUILD.bazel
plugin-template/: .bazelrc  .gitlab-ci.yml  README.md  WORKSPACE  plugin.json
plugin-template/ios/: BUILD.bazel  Info.plist
plugin-template/ios/Sources/: PluginMain.swift
plugin-template/scripts/: build_plugin_ios.sh  package_plugin.sh  sign_plugin_ios.sh  test_plugin_ios.sh  validate_plugin.py
valdi/vscode_debugger/: README.md
valdi_core/: BUILD.bazel
(+75 files in other folders)
