load("//bzl/valdi:valdi_application.bzl", "valdi_application")

####################
## OmniTAK Android Application
##
## Cross-platform TAK (Team Awareness Kit) client for Android
## Built with Valdi framework, Kotlin/JNI native layer, and Rust FFI
####################

valdi_application(
    name = "omnitak_android",
    # Android Configuration
    android_activity_theme_name = "Theme.OmniTAK.Launch",
    android_app_icon_name = "app_icon",
    android_resource_files = glob(["app_assets/android/**"]),
    android_package = "com.engindearing.omnitak",

    # iOS Configuration (for potential future iOS build from this target)
    # Currently, iOS builds from apps/omnitak_ios_test/
    # ios_bundle_id = "com.engindearing.omnitak",
    # ios_families = ["iphone", "ipad"],
    # ios_app_icons = glob(["app_assets/ios/Icons.xcassets/**"]),

    # Application Metadata
    title = "OmniTAK",
    version = "0.1.0",

    # Root Component
    # Points to the main App component in the omnitak_app module
    root_component_path = "App@omnitak_app/src/omnitak_app",

    # Dependencies
    deps = [
        # Main OmniTAK mobile module (TypeScript + Native)
        "//modules/omnitak_mobile",

        # App-specific sources
        "//apps/omnitak_android/src/valdi/omnitak_app",
    ],
)
