load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")

# Plugin Swift library
swift_library(
    name = "MyPluginLib",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "MyPlugin",
    deps = [
        "//modules/omnitak_plugin_system/ios:OmniTAKPluginSystem",
    ],
    visibility = ["//visibility:public"],
)

# iOS Framework for plugin
ios_framework(
    name = "MyPlugin",
    bundle_id = "com.engindearing.omnitak.plugin.myplugin",
    families = ["iphone", "ipad"],
    infoplists = ["Info.plist"],
    minimum_os_version = "14.0",
    deps = [":MyPluginLib"],
    visibility = ["//visibility:public"],
)
