load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "omnitak_app",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_class_path = "com.engindearing.omnitak.app",
    android_output_target = "release",
    visibility = ["//visibility:public"],
    deps = [
        "//modules/omnitak_mobile",
        "//src/valdi_modules/src/valdi/valdi_core",
        "//src/valdi_modules/src/valdi/valdi_tsx",
    ],
)
